# ffserve

./: .flaskenv  README  README.rst  config.cfg  ffserve.py  pyproject.toml
ffserve/: __init__.py  pages.py  tasks.py
ffserve/templates/: all_authors.html  all_stories.html  favorites.html  main_index.html  view_story.html  wait_for_fav.html
instance/: config.cfg  config.cfg.default
