[tool.poetry]
name = "ffserve"
version = "0.1.0"
description = "Web application for browsing ffmirror archives"
authors = ["alethiophile <tomdicksonhunt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
ffmirror = "^0.4.1"
celery = {extras = ["redis"], version = "^5.2.7"}
requests = "^2.22"
[tool.poetry.dev-dependencies]
python-dotenv = "^0.10.1"
mypy = "^0.982"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
